added color class, changes in GameController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.datasource.url=jdbc:oracle:thin:@212.33.90.213:1521:XE
 spring.datasource.username=SBD_ST_PS7_1
 spring.datasource.password=SBD_ST_PS7_1
+
+## specjalne linie kodu, do tego aby ³adniejszy by³ interfejs tekstowy
 logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 spring.main.banner-mode=off
+
