--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.datasource.url=jdbc:oracle:thin:@212.33.90.213:1521:XE
 spring.datasource.username=SBD_ST_PS7_1
 spring.datasource.password=SBD_ST_PS7_1
