--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,28 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!--
+   We have to explicitly instruct Maven to use tritonus-share 0.3.7-2
+   and NOT 0.3.7-1, otherwise vorbisspi won't work.
+  -->
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>tritonus-share</artifactId>
+			<version>0.3.7-2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>mp3spi</artifactId>
+			<version>1.9.5-1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>vorbisspi</artifactId>
+			<version>1.0.3-1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
