few small changes :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=SBD_ST_PS7_1
 spring.datasource.password=SBD_ST_PS7_1
 
 ## specjalne linie kodu, do tego aby ³adniejszy by³ interfejs tekstowy
-logging.level.root=WARN
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-spring.main.banner-mode=off
+#logging.level.root=WARN
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+#spring.main.banner-mode=off
 
